--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,10 @@
   },
   "homepage": "https://github.com/KomelT/docker-backup#readme",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.226.0",
     "dotenv": "^16.0.3"
+  },
+  "resolutions": {
+    "graceful-fs": "4.x.x"
   }
 }
